Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@kms_invalid_dotclock - dmesg-fail - *ERROR* .* mismatch in shared_dpll
<7> [837.155357] i915 0000:00:02.0: [drm:intel_ddi_read_func_ctl [i915]] [ENCODER:317:DDI TC1/PHY TC1] Fec status: 1
<3> [837.155499] i915 0000:00:02.0: [drm] *ERROR* [CRTC:167:pipe B] mismatch in shared_dpll (expected 0000000000000000, found 00000000de29e2df)
<4> [837.155582] ------------[ cut here ]------------
<4> [837.155585] pipe state doesn't match!
<4> [837.155606] WARNING: CPU: 0 PID: 2176 at drivers/gpu/drm/i915/display/intel_display.c:8894 intel_atomic_commit_tail+0x1149/0x1380 [i915]
<4> [837.155721] Modules linked in: snd_hda_intel i915 amdgpu drm_ttm_helper ttm gpu_sched vgem fuse snd_hda_codec_hdmi btusb btrtl btbcm btintel bluetooth mei_hdcp ecdh_generic ecc snd_intel_dspcfg x86_pkg_temp_thermal coretemp snd_hda_codec crct10dif_pclmul crc32_pclmul snd_hwdep snd_hda_core ghash_clmulni_intel cdc_ether usbnet mii igc snd_pcm mei_me ptp pps_core mei i2c_i801 i2c_smbus prime_numbers intel_lpss_pci [last unloaded: i915]
<4> [837.155834] CPU: 0 PID: 2176 Comm: kms_invalid_dot Tainted: G U 5.12.0-gca1f02fd329be-drmtip_822+ #1
<4> [837.155838] Hardware name: Intel(R) Client Systems NUC11TNHi3/NUC11TNBi3, BIOS TNTGL357.0038.2020.1124.1648 11/24/2020
<4> [837.155842] RIP: 0010:intel_atomic_commit_tail+0x1149/0x1380 [i915]
<4> [837.155954] Code: 18 31 d2 4c 89 f7 e8 86 4b ff ff e9 80 f6 ff ff 41 0f b6 97 a8 98 00 00 38 d0 0f 84 20 f7 ff ff e9 dc 01 0f 00 e8 14 fc c8 e0 <0f> 0b e9 54 f9 ff ff 8b 44 24 64 80 3d 7e 4b 24 00 00 48 c7 c7 60
<4> [837.155958] RSP: 0018:ffffc900009cbb78 EFLAGS: 00010286
<4> [837.155964] RAX: 0000000000000000 RBX: ffff88810a0a8800 RCX: 0000000000000001
<4> [837.155968] RDX: 0000000080000001 RSI: ffffffff8235ec63 RDI: 00000000ffffffff
<4> [837.156197] RBP: ffff8881ac9b2000 R08: 0000000000000001 R09: 0000000000000001
<4> [837.156201] R10: 00000000fd19d16c R11: 00000000b55a1244 R12: ffff88810c3a2000
<4> [837.156580] R13: ffff88812619a000 R14: ffff888197fc0858 R15: ffff888197fc0000
<4> [837.156585] FS: 00007f7a15bf54c0(0000) GS:ffff8884a0000000(0000) knlGS:0000000000000000
<4> [837.156589] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [837.156593] CR2: 00007fff95716c78 CR3: 0000000198c78006 CR4: 0000000000770ef0
<4> [837.156596] PKRU: 55555554
<4> [837.156599] Call Trace:
<4> [837.156619] intel_atomic_commit+0x363/0x3e0 [i915]
<4> [837.156728] drm_atomic_helper_set_config+0x6d/0xb0
<4> [837.156736] drm_mode_setcrtc+0x1e9/0x720
<4> [837.156764] ? drm_mode_getcrtc+0x180/0x180
<4> [837.156769] drm_ioctl_kernel+0xaa/0xf0
<4> [837.156779] drm_ioctl+0x1e8/0x390
<4> [837.156785] ? drm_mode_getcrtc+0x180/0x180
<4> [837.156806] __x64_sys_ioctl+0x6d/0xa0
<4> [837.156813] do_syscall_64+0x33/0x80
<4> [837.156819] entry_SYSCALL_64_after_hwframe+0x44/0xae
<4> [837.156825] RIP: 0033:0x7f7a187ac50b
<4> [837.156829] Code: 0f 1e fa 48 8b 05 85 39 0d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 55 39 0d 00 f7 d8 64 89 01 48
<4> [837.156832] RSP: 002b:00007fff9d58e498 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [837.156838] RAX: ffffffffffffffda RBX: 00007fff9d58e4d0 RCX: 00007f7a187ac50b
<4> [837.156841] RDX: 00007fff9d58e4d0 RSI: 00000000c06864a2 RDI: 0000000000000005
<4> [837.156844] RBP: 00007fff9d58e4d0 R08: 0000000000000000 R09: 000055ab8f16b890
<4> [837.156847] R10: 00007fff9d58e590 R11: 0000000000000246 R12: 00000000c06864a2
<4> [837.156850] R13: 0000000000000005 R14: 000055ab8ea02040 R15: 0000000000000000
<4> [837.156868] irq event stamp: 187429
<4> [837.156870] hardirqs last enabled at (187435): [<ffffffff8112ba32>] console_unlock+0x4c2/0x5d0
<4> [837.156875] hardirqs last disabled at (187440): [<ffffffff8112b9a2>] console_unlock+0x432/0x5d0
<4> [837.156879] softirqs last enabled at (187266): [<ffffffff81e00342>] __do_softirq+0x342/0x48e
<4> [837.156884] softirqs last disabled at (187259): [<ffffffff810b46cd>] irq_exit_rcu+0xad/0xd0
<4> [837.156889] ---[ end trace d3cba659c77912d5 ]---